--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
     <title>Portfolio - Reffai Amar</title>
     <link rel="shortcut icon" href="icons/icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -131,21 +132,53 @@
        
     </section>
 
+    <section class="contact">
+        <div class="contact-container">
+            <h1><span> Contact</span> Me</h1>
+            <hr>
+            <br>
+            <div class="information-contact">
+                <p>
+                    <i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+                    Algeria, ALG</p>
+                <p> 
+                    <i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+                    Phone: +213 665192669</p>
+                <p> 
+                    <i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i>
+                    Email: reffaiamar@gmail.com</p><br><br>
+            </div>
+
+            <div class="contact-form">
+                <p>Let's get in touch. Send me a message:</p>
+                <form action="">
+                    <input type="text" name="name" id="name" placeholder="Name">
+                    <input type="email" name="mail" id="mail"placeholder="Email">
+                    <input type="text" name="subject" id="subject"placeholder="Subject" >
+                    <input type="text" name="message" id="message"placeholder="Message">
+                    <button class="btn"><i class="fa fa-paper-plane"></i>Send Message</button>
+                </form>
+            </div>
+
+        </div>
+    </section>
+
 
 
     <footer>
         <div class="content-footer">
             <h2>Amar <span>Reffai</span></h2>
             <p>
-                For more HTML, CSS, and programming project - please click on the link below to Follow my linkedin:
+                For more HTML, CSS, and programming project - please click on the link below to Follow my Github:
             </p>
+            <a href="https://github.com/Billybillel" target="_blank"><img src="imgs/github-c.png" alt=""></a>
 
             <p class="end">
                 CopyRight By Amar Reffai
 
             </p>
         </div>
-    </footer>
+    </footer> 
     
 </body>
 </html>
