--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <h2>Reffai<span>Portfolio</span></h2>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#" class="btn">Subscribe</a>
         </nav>
@@ -47,7 +47,7 @@
     </section>
 
 
-    <section class="about">
+    <section class="about"id="about">
         <div class="container-img">
             <img src="./imgs/Study-abroad.png" alt="">
         </div>
@@ -63,7 +63,7 @@
 
 
 
-    <section class="services">
+    <section class="services"id="services">
         <h1 class="text-center"><span>Our </span>Services</h1>
         <div class="box">
             <div class="card">
@@ -107,7 +107,7 @@
     </section>
 
 
-    <section class="skills">
+    <section class="skills"id="skills" >
         <div class="container-skills">
             <h1><span>My </span>Skills</h1>
             <div class="content-skills">
@@ -132,7 +132,7 @@
        
     </section>
 
-    <section class="contact">
+    <section class="contact"id="contact">
         <div class="contact-container">
             <h1><span> Contact</span> Me</h1>
             <hr>
